fix: Let jump animation support 20 char

--- a/sass/title-text.scss
+++ b/sass/title-text.scss
@@ -214,8 +214,6 @@ body {
   transition: transform 0.2s;
 }
 
-
-
 @keyframes pressDown1 {
 
   30%,
@@ -320,7 +318,161 @@ body {
   }
 }
 
+@keyframes pressDown9 {
 
+  20%,
+  30%,
+  100% {
+    transform: translateY(0);
+  }
+
+  25% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown10 {
+
+  40%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+
+  45% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown11 {
+
+  30%,
+  40%,
+  100% {
+    transform: translateY(0);
+  }
+
+  35% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown12 {
+
+  60%,
+  70%,
+  100% {
+    transform: translateY(0);
+  }
+
+  65% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown13 {
+
+  10%,
+  20%,
+  100% {
+    transform: translateY(0);
+  }
+
+  15% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown14 {
+
+  35%,
+  45%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown15 {
+
+  20%,
+  30%,
+  100% {
+    transform: translateY(0);
+  }
+
+  25% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown16 {
+
+  40%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+
+  45% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown17 {
+
+  30%,
+  40%,
+  100% {
+    transform: translateY(0);
+  }
+
+  35% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown18 {
+
+  60%,
+  70%,
+  100% {
+    transform: translateY(0);
+  }
+
+  65% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown19 {
+
+  10%,
+  20%,
+  100% {
+    transform: translateY(0);
+  }
+
+  15% {
+    transform: translateY(10px);
+  }
+}
+
+@keyframes pressDown20 {
+
+  35%,
+  45%,
+  100% {
+    transform: translateY(0);
+  }
+
+  40% {
+    transform: translateY(10px);
+  }
+}
 
 .key:nth-child(1) {
   animation: pressDown1 2s infinite;
@@ -339,7 +491,7 @@ body {
 }
 
 .key:nth-child(5) {
-  animation: pressDown5 2.5s infinite;
+  animation: pressDown5 3.5s infinite;
 }
 
 .key:nth-child(6) {
@@ -352,4 +504,52 @@ body {
 
 .key:nth-child(8) {
   animation: pressDown8 3.2s infinite;
+}
+
+.key:nth-child(9) {
+  animation: pressDown9 2.7s infinite;
+}
+
+.key:nth-child(10) {
+  animation: pressDown10 7.3s infinite;
+}
+
+.key:nth-child(11) {
+  animation: pressDown11 2.4s infinite;
+}
+
+.key:nth-child(12) {
+  animation: pressDown12 3.6s infinite;
+}
+
+.key:nth-child(13) {
+  animation: pressDown13 2.6s infinite;
+}
+
+.key:nth-child(14) {
+  animation: pressDown14 3.1s infinite;
+}
+
+.key:nth-child(15) {
+  animation: pressDown15 5.8s infinite;
+}
+
+.key:nth-child(16) {
+  animation: pressDown16 3.4s infinite;
+}
+
+.key:nth-child(17) {
+  animation: pressDown17 2.5s infinite;
+}
+
+.key:nth-child(18) {
+  animation: pressDown18 3.5s infinite;
+}
+
+.key:nth-child(19) {
+  animation: pressDown19 2.9s infinite;
+}
+
+.key:nth-child(20) {
+  animation: pressDown20 4.7s infinite;
 }
